--- a/CustomerManagement.API/appsettings.json
+++ b/CustomerManagement.API/appsettings.json
@@ -7,6 +7,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost;Database=CustomerManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
-    }
+    "DefaultConnection": "Server=localhost;Database=CustomerManagementDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "JwtSettings": {
+    "Issuer": "CustomerManagementAPI",
+    "Audience": "CustomerManagementAPIUsers",
+    "SecretKey": "VERY_LONG_RANDOM_KEY_32+CHARS" //Please do not hard code this for production. Use secret managers AWS/Azure.
+  }
 }
