Auth changes initial

--- a/CustomerManagement.API/appsettings.json
+++ b/CustomerManagement.API/appsettings.json
@@ -12,6 +12,6 @@
   "JwtSettings": {
     "Issuer": "CustomerManagementAPI",
     "Audience": "CustomerManagementAPIUsers",
-    "SecretKey": "VERY_LONG_RANDOM_KEY_32+CHARS" //Please do not hard code this for production. Use secret managers AWS/Azure.
+    "SecretKey": "12345678901234567890123456789012"
   }
 }
